Add course selection basic

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
   </head>
 
   <body>
-    
+  	<select name="Courses">
+		<option value="Yammer">Volvo</option>
+		<option value="Jira">Saab</option>
+		<option value="Stock Checker">Fiat</option>
+	</select>
   </body>
 </html>
