course choice update

--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,9 @@
 
   <body>
   	<select name="Courses">
-		<option value="Yammer">Volvo</option>
-		<option value="Jira">Saab</option>
-		<option value="Stock Checker">Fiat</option>
+		<option value="Yammer">Yammer</option>
+		<option value="Jira">Jira</option>
+		<option value="Stock Checker">Stock_Checker</option>
 	</select>
   </body>
 </html>
