--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,20 @@
 <!doctype html>
-<html ng-app="todoApp">
+<html>
   <head>
   	<title>Train with M&S</title>
   	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
     <script src="js/todo.js"></script>
-    <link rel="stylesheet" href="css/todo.css">
+    <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
   </head>
 
   <body>
-  	<select name="Courses">
-		<option value="Yammer">Yammer</option>
-		<option value="Jira">Jira</option>
-		<option value="Stock Checker">Stock_Checker</option>
-	</select>
+	<div class="main-page">
+	  	<select name="Courses">
+			<option value="Yammer">Yammer</option>
+			<option value="Jira">Jira</option>
+			<option value="Stock Checker">Stock_Checker</option>
+		</select>
+	</div>
   </body>
 </html>
