CSS changes to center content blocks. Some content added.

--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,65 @@
   </head>
 
   <body>
-	<div class="main-page">
-	  	<select name="Courses">
-			<option value="Yammer">Yammer</option>
-			<option value="Jira">Jira</option>
-			<option value="Stock Checker">Stock_Checker</option>
-		</select>
-	</div>
+    <div class="content-container">
+      <div class="center-wrapper">
+        <h3>Yammer training</h3>
+        <br>
+        <br>
+    		<div class="main-page">
+        <h4>Welcome to Chapter 1</h4> 
+
+        Follow the content through and by the end of this chapter you should have an M&S Yammer account set up and you will have posted your first comment!
+    	</div>
+
+        <br>
+        <br>
+
+        <div class="main-page">
+          <b>What is Yammer?</b>
+          <br>
+          <br>
+          The following video explains what Yammer is all about and why it's quickly becoming an essential daily tool at M&S.
+          <br>
+          <br>
+          <iframe width="427" height="255" src="https://www.youtube.com/embed/MMEoWMJf1uY" frameborder="0" allowfullscreen></iframe>
+        </div>
+
+        <br>
+        <br>
+
+        <div class="main-page">
+          <b>Already an expert?</b>
+          <br>
+          <br>
+          Have you used Yammer before?
+          <br>
+          <select id="courses">
+            <option value="No">No</option>
+            <option value="Yes">Yes</option>
+          </select>
+        </div>
+
+        <br>
+        <br>
+
+        <div class="main-page">
+          <b>Excercise</b>
+          <br>
+          <br>
+
+          Time to get practical...
+          <br>
+          <br>
+
+          1. Go to <a href="https://www.yammer.com/marks-and-spencer.com/">M&S Yammer</a>.
+          <br>
+          2. Sign in using your corporate username and password. 
+          <br>
+
+        </div>
+
+      </div>
+    </div>
   </body>
 </html>
