Make youtube fit to screen

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
           The following video explains what Yammer is all about and why it's quickly becoming an essential daily tool at M&S.
           <br>
           <br>
-          <iframe width="427" height="255" src="https://www.youtube.com/embed/MMEoWMJf1uY" frameborder="0" allowfullscreen></iframe>
+          <iframe width="100%" height="100%" src="https://www.youtube.com/embed/MMEoWMJf1uY" frameborder="0" allowfullscreen></iframe>
         </div>
 
         <br>
