Add profile content

--- a/public/index.html
+++ b/public/index.html
@@ -67,6 +67,19 @@
 
         </div>
 
+        <div class="main-page">
+        <b>Your profile</b> 
+
+        <br>
+        <br>
+
+        A completed Yammer profile lets your colleagues know who you are. As you are logging on using a generic email address your profile will be set up for your store rather than you as individual. Therefore whilst you can’t use your personal details you can make
+        sure the Store Profile contains some key information on the store in general that will help
+        others to understand the context of your comments. For example the type of Store you are,
+        GM: Food ratio, customer profile and the region you sit within. Let people know the people
+        that are accessing the account, for example Commercial Managers or Section Managers.
+        </div>
+
       </div>
     </div>
   </body>
