--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-  	<title>Train with M&S</title>
+  	<title>M&S Yammer Training</title>
   	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
     <script src="js/todo.js"></script>
     <link rel="stylesheet" href="css/main.css">
@@ -11,7 +11,10 @@
   <body>
     <div class="content-container">
       <div class="center-wrapper">
-        <h3>Yammer training</h3>
+        <br>
+        <br>
+        <img src="Images/mns_logo.jpg" alt="M&S Logo" style="width:10%;height:10%; border-radius: 100px; border-style: solid; border-width: 3px;">
+        <h3>Yammer Training</h3>
         <br>
         <br>
     		<div class="main-page">
@@ -42,7 +45,7 @@
           <br>
           Have you used Yammer before?
           <br>
-          <select id="courses">
+          <select class="dropdown-menu" id="courses">
             <option value="No">No</option>
             <option value="Yes">Yes</option>
           </select>
@@ -67,17 +70,20 @@
 
         </div>
 
+        <br>
+        <br>
+
         <div class="main-page">
-        <b>Your profile</b> 
+          <b>Your profile</b> 
 
-        <br>
-        <br>
+          <br>
+          <br>
 
-        A completed Yammer profile lets your colleagues know who you are. As you are logging on using a generic email address your profile will be set up for your store rather than you as individual. Therefore whilst you can’t use your personal details you can make
-        sure the Store Profile contains some key information on the store in general that will help
-        others to understand the context of your comments. For example the type of Store you are,
-        GM: Food ratio, customer profile and the region you sit within. Let people know the people
-        that are accessing the account, for example Commercial Managers or Section Managers.
+          A completed Yammer profile lets your colleagues know who you are. As you are logging on using a generic email address your profile will be set up for your store rather than you as individual. Therefore whilst you can’t use your personal details you can make
+          sure the Store Profile contains some key information on the store in general that will help
+          others to understand the context of your comments. For example the type of Store you are,
+          GM: Food ratio, customer profile and the region you sit within. Let people know the people
+          that are accessing the account, for example Commercial Managers or Section Managers.
         </div>
 
       </div>
