logo size increased to 50%

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
       <div class="center-wrapper">
         <br>
         <br>
-        <img src="Images/mns_logo.jpg" alt="M&S Logo" style="width:10%;height:10%; border-radius: 100px; border-style: solid; border-width: 3px;">
+        <img src="Images/mns_logo.jpg" alt="M&S Logo" style="width:50%;height:50%; border-radius: 100px; border-style: solid; border-width: 3px;">
         <h3>Yammer Training</h3>
         <br>
         <br>
@@ -27,7 +27,7 @@
         <br>
 
         <div class="main-page">
-          <b>What is Yammer?</b>
+          <b>Part 1 - What is Yammer?</b>
           <br>
           <br>
           The following video explains what Yammer is all about and why it's quickly becoming an essential daily tool at M&S.
@@ -40,7 +40,7 @@
         <br>
 
         <div class="main-page">
-          <b>Already an expert?</b>
+          <b>Part 2 - Already an expert?</b>
           <br>
           <br>
           Have you used Yammer before?
@@ -55,7 +55,7 @@
         <br>
 
         <div class="main-page">
-          <b>Excercise</b>
+          <b>Part 3 - Exercise</b>
           <br>
           <br>
 
@@ -74,7 +74,7 @@
         <br>
 
         <div class="main-page">
-          <b>Your profile</b> 
+          <b>Part 4 - Your profile</b> 
 
           <br>
           <br>
