Adding sign in instruction content

--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,11 @@
       <div class="center-wrapper">
         <br>
         <br>
-        <img src="Images/mns_logo.jpg" alt="M&S Logo" style="width:50%;height:50%; border-radius: 100px; border-style: solid; border-width: 3px;">
+        <img class="img-circle" src="Images/mns_logo.jpg" alt="M&S Logo" style="width:50%;height:50%; border-style: solid; border-width: 3px;" >
         <h3>Yammer Training</h3>
+        <br>
+        <br>
+        <b>Chapter 1</b> - Chapter 2 - Chapter 3 - Chapter 4 - Chapter 5 - Chapter 6 - Chapter 7
         <br>
         <br>
     		<div class="main-page">
@@ -37,6 +40,7 @@
         </div>
 
         <br>
+       
         <br>
 
         <div class="main-page">
@@ -45,7 +49,7 @@
           <br>
           Have you used Yammer before?
           <br>
-          <select class="dropdown-menu" id="courses">
+          <select id="newToYammer">
             <option value="No">No</option>
             <option value="Yes">Yes</option>
           </select>
@@ -55,7 +59,7 @@
         <br>
 
         <div class="main-page">
-          <b>Part 3 - Exercise</b>
+          <b>Part 3 - Sign in</b>
           <br>
           <br>
 
@@ -63,10 +67,84 @@
           <br>
           <br>
 
-          1. Go to <a href="https://www.yammer.com/marks-and-spencer.com/">M&S Yammer</a>.
+          <b>Step 1</b>
           <br>
-          2. Sign in using your corporate username and password. 
           <br>
+
+          The Yammer App is available free in the App Store on iPhone and iPad, or Google Play for Android
+          Devices, download and install it. This App does get regularly updated, so do make sure you keep
+          updating it when prompted. You’ll need to Sign-In once, after that your device will remember your details.
+          If you have been using Yammer previously using a Shared Account, you will need to make sure you
+          log out before you start, Slide open the menu and press Log out
+
+          <br>
+          <br>
+          <img src="Images/yammer_step_1.png" class="content-images">
+          <br>
+          <br>
+
+          <b>Step 2</b>
+          <br>
+          <br>
+
+          When you open the app you should come to the screen below, choose the Log In button
+          <br>
+          <br>
+
+          <img src="Images/yammer_step_2.png" class="content-images">
+          <br>
+          <br>
+
+          <b>Step 3</b>
+          <br>
+          <br>
+
+          •  If you are a head office employee, international, regional management or store managers with a
+          ‘named’ email address
+          Enter your Work email as first.last@mnscorp.net, you can leave this password blank.
+          E.g. joe.bloggs@mnscorp.net
+          <br>
+          •  If you are a UK store employee
+          Enter your username as employeeID@mnscorp.net, you can leave this password blank.
+          E.g. 15040824@mnscorp.net.
+          <br>
+          •  Press Log In.
+          <br>
+          <br>
+
+          <img src="Images/yammer_step_3.png" class="content-images">
+          <br>
+          <br>
+
+          <b>Step 4</b>
+          <br>
+          <br>
+
+          •  If you are a head office employee, international, regional management or store managers with a
+          ‘named’ email address:
+          Enter your username as first.last@mnscorp.net and the normal password you use to log on to
+          M&S computers. E.g. joe.bloggs@mnscorp.net
+          <br>
+          •  If you are a UK store employee”
+          Enter your username as employeeID@mnscorp.net and the normal password you would use to
+          log onto a store workstation or HHT. E.g. 15040824@mnscorp.net
+          <br>
+          <br>
+
+          <img src="Images/yammer_step_4.png" class="content-images">
+
+          <br>
+          <br>
+
+          <b>Step 5</b>
+          <br>
+          <br>
+
+          That’s it, you’re in and can now view and post messages and pictures to Yammer!
+          <br>
+          <br>
+
+          <img src="Images/yammer_step_5.png" class="content-images">
 
         </div>
 
@@ -86,6 +164,20 @@
           that are accessing the account, for example Commercial Managers or Section Managers.
         </div>
 
+        <br>
+        <br>
+
+        <div class="main-page">
+          <b>You've completed chapter 1!</b> 
+
+          <br>
+          <br>
+
+          Click <b>here</b> to move onto Chapter 2...
+        </div>
+
+        <br>
+        <br>
       </div>
     </div>
   </body>
