--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
           The following video explains what Yammer is all about and why it's quickly becoming an essential daily tool at M&S.
           <br>
           <br>
-          <iframe width="100%" height="100%" src="https://www.youtube.com/embed/MMEoWMJf1uY" frameborder="0" allowfullscreen></iframe>
+          <iframe class="content-images" src="https://www.youtube.com/embed/MMEoWMJf1uY" frameborder="0" allowfullscreen></iframe>
         </div>
 
         <br>
@@ -79,7 +79,7 @@
 
           <br>
           <br>
-          <img src="Images/yammer_step_1.png" class="content-images">
+          <img src="/Images/yammer_step_1.png" class="content-images">
           <br>
           <br>
 
@@ -91,7 +91,7 @@
           <br>
           <br>
 
-          <img src="Images/yammer_step_2.png" class="content-images">
+          <img src="/Images/yammer_step_2.png" class="content-images">
           <br>
           <br>
 
