Removed '_' from image names

--- a/public/index.html
+++ b/public/index.html
@@ -79,7 +79,7 @@
 
           <br>
           <br>
-          <img src="Images/yammer_step_1.png" alt="sign in" class="content-images">
+          <img src="Images/yammerstep1.png" alt="sign in" class="content-images">
           <br>
           <br>
 
@@ -91,7 +91,7 @@
           <br>
           <br>
 
-          <img src="Images/yammer_step_2.png" alt="sign in" class="content-images">
+          <img src="Images/yammerstep2.png" alt="sign in" class="content-images">
           <br>
           <br>
 
@@ -112,7 +112,7 @@
           <br>
           <br>
 
-          <img src="Images/yammer_step_3.png" alt="sign in" class="content-images">
+          <img src="Images/yammerstep3.png" alt="sign in" class="content-images">
           <br>
           <br>
 
@@ -131,7 +131,7 @@
           <br>
           <br>
 
-          <img src="Images/yammer_step_4.png" alt="sign in" class="content-images">
+          <img src="Images/yammerstep4.png" alt="sign in" class="content-images">
 
           <br>
           <br>
@@ -144,7 +144,7 @@
           <br>
           <br>
 
-          <img src="Images/yammer_step_5.png" alt="sign in" class="content-images">
+          <img src="Images/yammerstep5.png" alt="sign in" class="content-images">
 
         </div>
 
